--- a/styles/style.css
+++ b/styles/style.css
@@ -983,7 +983,7 @@ button:hover {
 }
 
 .mystudents__information-container {
-    width: 100%; 
+    width: 100%;
     /* height: 690px; */
     border: 1px solid #FA1100;
     border-radius: 10px;
@@ -1002,7 +1002,7 @@ button:hover {
 .mystudents__information-grid {
     display: grid;
     /* grid-template-columns: 300px 300px 500px 244px;*/
-    grid-template-rows: 130px; 
+    grid-template-rows: 130px;
     grid-template-columns: 25% 20% 47% 8%;
     /* margin-left: 60px;
     margin-top: 45px; */
@@ -1093,16 +1093,14 @@ button:hover {
 /* Модальное окно */
 .modal {
     -webkit-box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.2);
-            box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.2);
-  }
+    box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.2);
+}
 
-  
 .modal {
     display: none;
     position: fixed;
     left: 0;
     right: 0;
-    background-color: #fafafa;
     padding: 0;
     max-height: 70%;
     width: 55%;
@@ -1110,38 +1108,35 @@ button:hover {
     overflow-y: auto;
     border-radius: 2px;
     will-change: top, opacity;
-  }
-  
-  .modal:focus {
-    outline: none;
-  }
+}
 
-  .modal h1, .modal h2, .modal h3, .modal h4 {
-    margin-top: 0;
-  }
-  
-  .modal .modal-content {
+.modal-close {
+    width: 15px;
+    margin-left: 50px;
+}
+
+
+.modal .modal-content {
     padding: 24px;
-  }
-  
-  .modal .modal-close {
+}
+
+.waves-effect {
+    position: relative;
     cursor: pointer;
-  }
-  
-  .modal .modal-footer {
-    border-radius: 0 0 2px 2px;
-    background-color: #fafafa;
-    padding: 4px 6px;
-    height: 56px;
-    width: 100%;
-    text-align: right;
-  }
-  
-  .modal .modal-footer .btn-flat {
-    margin: 6px 0;
-  }
-  
-  .modal-overlay {
+    display: inline-block;
+    overflow: hidden;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-tap-highlight-color: transparent;
+    vertical-align: middle;
+    z-index: 1;
+    -webkit-transition: .3s ease-out;
+    transition: .3s ease-out;
+}
+
+.modal-overlay {
     position: fixed;
     z-index: 999;
     top: -25%;
@@ -1153,109 +1148,5 @@ button:hover {
     background: #000;
     display: none;
     will-change: opacity;
-  }
-  
-  .modal.modal-fixed-footer {
-    padding: 0;
-    height: 70%;
-  }
-  
-  .modal.modal-fixed-footer .modal-content {
-    position: absolute;
-    height: calc(100% - 56px);
-    max-height: 100%;
-    width: 100%;
-    overflow-y: auto;
-  }
-  
-  .modal.modal-fixed-footer .modal-footer {
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
-    position: absolute;
-    bottom: 0;
-  }
-  
-  .modal.bottom-sheet {
-    top: auto;
-    bottom: -100%;
-    margin: 0;
-    width: 100%;
-    max-height: 45%;
-    border-radius: 0;
-    will-change: bottom, opacity;
-  }
+}
 
-  /* Modal */
-.datepicker-modal {
-    max-width: 325px;
-    min-width: 300px;
-    max-height: none;
-  }
-  
-  .datepicker-container.modal-content {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    padding: 0;
-  }
-
-
-  .modal.modal-fixed-footer {
-    padding: 0;
-    height: 70%;
-  }
-  
-  .modal.modal-fixed-footer .modal-content {
-    position: absolute;
-    height: calc(100% - 56px);
-    max-height: 100%;
-    width: 100%;
-    overflow-y: auto;
-  }
-  
-  .modal.modal-fixed-footer .modal-footer {
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
-    position: absolute;
-    bottom: 0;
-  }
-
-  .modal .modal-content {
-    padding: 24px;
-  }
-
-  .modal.modal-fixed-footer .modal-content {
-    position: absolute;
-    height: calc(100% - 56px);
-    max-height: 100%;
-    width: 100%;
-    overflow-y: auto;
-  }
-
-  .datepicker-container.modal-content {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    padding: 0;
-  }
-
-
-  .modal .modal-footer {
-    border-radius: 0 0 2px 2px;
-    background-color: #fafafa;
-    padding: 4px 6px;
-    height: 56px;
-    width: 100%;
-    text-align: right;
-  }
-  
