--- a/styles/media.css
+++ b/styles/media.css
@@ -774,6 +774,11 @@
         margin-bottom: 25px;
         margin-top: 15px;
     }
+    .popup___icon-mail {
+        width: 60px;
+        height: 60px;
+        margin: 25px auto;
+    }
 
 }
 
