--- a/styles/style.css
+++ b/styles/style.css
@@ -346,7 +346,8 @@ button:hover {
 .menu__mobile-button,
 .mystudents__container-mobile,
 .events__teacher-none,
-.admin__button-mobile {
+.admin__button-mobile,
+.events__tradition-mobile {
     display: none;
 }
 
@@ -631,7 +632,6 @@ button:hover {
 
 .events__item-transition {
     margin: 50px 50px 0 0;
-    display: none;
 }
 
 .events__content-info {
@@ -1201,98 +1201,4 @@ button:hover {
 
 .popup__test {
     margin-top: 25px;
-}
-
-/*Слайдер*/
-.carousel {
-    overflow: hidden;
-    position: relative;
-    width: 100%;
-    height: 400px;
-    -webkit-perspective: 500px;
-    perspective: 500px;
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-    -webkit-transform-origin: 0% 50%;
-    transform-origin: 0% 50%;
-}
-
-.carousel.carousel-slider {
-    top: 0;
-    left: 0;
-}
-
-.carousel.carousel-slider .carousel-fixed-item {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 20px;
-    z-index: 1;
-}
-
-.carousel.carousel-slider .carousel-fixed-item.with-indicators {
-    bottom: 68px;
-}
-
-.carousel.carousel-slider .carousel-item {
-    width: 100%;
-    height: 100%;
-    min-height: 400px;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
-.carousel .indicators {
-    position: absolute;
-    text-align: center;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: 0;
-}
-
-.carousel .indicators .indicator-item {
-    display: inline-block;
-    position: relative;
-    cursor: pointer;
-    height: 8px;
-    width: 8px;
-    margin: 24px 4px;
-    background-color: rgba(255, 255, 255, 0.5);
-    -webkit-transition: background-color .3s;
-    transition: background-color .3s;
-    border-radius: 50%;
-}
-
-.carousel .indicators .indicator-item.active {
-    background-color: #fff;
-}
-
-.carousel.scrolling .carousel-item .materialboxed,
-.carousel .carousel-item:not(.active) .materialboxed {
-    pointer-events: none;
-}
-
-.carousel.carousel-slider .carousel-item {
-    width: 100%;
-    height: 100%;
-    min-height: 400px;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
-.carousel .carousel-item {
-    visibility: hidden;
-    width: 200px;
-    height: 200px;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
-.carousel.scrolling .carousel-item .materialboxed,
-.carousel .carousel-item:not(.active) .materialboxed {
-    pointer-events: none;
 }
